Help files and Region Tabs help

--- a/OutworldzFiles/Help/Birds.htm
+++ b/OutworldzFiles/Help/Birds.htm
@@ -137,12 +137,12 @@ width=408 height=314 src="Birds_files/image001.png"></span></p>
 will need to enable the bird module in each region's control panel.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><span style='font-family:"Verdana",sans-serif'><img
-width=199 height=117 src="Birds_files/image002.png"></span></p>
+10.0pt;margin-left:.5in;text-autospace:none'><img width=281 height=213
+id="Picture 1" src="Birds_files/image002.png"></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Global Settings</span></h2>
+<h2><span style='color:black'>Global Settings</span></h2>
 
 </div>
 
@@ -154,8 +154,8 @@ grid.  Birds must also be enabled in each Region.  See each Region’s edit
 screen for the checkbox.</span></a></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><span style='font-family:"Verdana",sans-serif'><img
-width=286 height=460 src="Birds_files/image003.png"></span></p>
+10.0pt;margin-left:.5in;text-autospace:none'><img width=391 height=497
+src="Birds_files/image003.png"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-indent:-.25in;text-autospace:none'><span
@@ -227,7 +227,7 @@ already exist in the scene - i.e., be rezzed in the region.</span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Console Commands</span></h2>
+<h2><span style='color:black'>Console Commands</span></h2>
 
 </div>
 
@@ -246,8 +246,8 @@ stop all birds flocking </span></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-indent:-.25in;text-autospace:none'><span
 style='font-family:Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Verdana",sans-serif'>birds-start or /118
-start                    <br>
+</span></span><span style='font-family:"Verdana",sans-serif'>birds-start or
+/118 start                    <br>
 start all birds flocking</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
@@ -335,7 +335,7 @@ color:#24292E'>   </span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Security</span></h2>
+<h2><span style='color:black'>Security</span></h2>
 
 </div>
 
@@ -348,7 +348,7 @@ but not in-world chat.</span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Bird Prims</span></h2>
+<h2><span style='color:black'>Bird Prims</span></h2>
 
 </div>
 
@@ -367,7 +367,7 @@ linksets can perform as well.</span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Network Traffic</span></h2>
+<h2><span style='color:black'>Network Traffic</span></h2>
 
 </div>
 
@@ -381,7 +381,7 @@ update framerate of 1, i.e., birds' position is updated every simulator frame.</
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Statistics</span></h2>
+<h2><span style='color:black'>Statistics</span></h2>
 
 </div>
 
