--- a/OutworldzFiles/Help/Permissions.htm
+++ b/OutworldzFiles/Help/Permissions.htm
@@ -100,12 +100,8 @@ color:black'>God mode is a useful function. However, making copies of items
 that are no copy or no transfer and giving them to others could be illegal.
 Please remember that copyright laws for your country need to be respected.</span></p>
 
-<p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%'><img width=235 height=443
-src="Permissions_files/image001.png"></span></p>
-
-<p class=MsoNormal style='margin-left:.5in'><b><span lang=EN style='font-size:
-11.0pt;line-height:115%'>&nbsp;</span></b></p>
+<p class=MsoNormal style='margin-left:.5in'><img width=326 height=436
+id="Picture 1" src="Permissions_files/image001.png"></p>
 
 <p class=MsoNormal style='margin-left:.5in'><b><span lang=EN style='font-size:
 11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Allow Gods: </span></b><span
@@ -139,22 +135,19 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 font-family:"Verdana",sans-serif'>Level &gt;= 200 can become a God</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><b><span lang=EN style='font-size:
-11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Region Owner is God: 
+11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Estate Owner is God: 
 </span></b><span lang=EN style='font-size:11.0pt;line-height:115%;font-family:
 "Verdana",sans-serif'>If enabled, the region owner may go into God mode.  </span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><b><span lang=EN style='font-size:
-11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Region Manager is
+11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Estate Manager is
 God: </span></b><span lang=EN style='font-size:11.0pt;line-height:115%;
 font-family:"Verdana",sans-serif'>If enabled, any region estate manager may go
 into God mode.  </span></p>
 
-<p class=MsoNormal style='margin-left:.5in'><b><u><span lang=EN
-style='font-size:11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Prim
-Limits: </span></u></b></p>
-
-<p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Opensimulator
+<p class=MsoNormal style='margin-left:.5in'><b><span lang=EN style='font-size:
+11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Prim Limits: </span></b><span
+lang=EN style='font-size:11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>Opensimulator
 normally does not enforce limits on the number of prims for a region or a
 parcel. The viewer can show a maximum of 45,000 prims.</span></p>
 
