--- a/OutworldzFiles/Help/Physics.htm
+++ b/OutworldzFiles/Help/Physics.htm
@@ -109,12 +109,18 @@ original&nbsp;</span><span style='font-family:"Verdana",sans-serif;background:
 white'>Open Dynamic Engine<span style='color:black'>&nbsp;physics. The <b>ubODE</b>
 engine, by Ubit Umarov, is an advanced version of ODE that is closer to Second
 Life compatibility with vehicles.&nbsp;</span> Bullet <span style='color:black'>is
-an award-winning physics engine. Running Bullet in a separate thread is the
-default.</span></span></p>
+an award-winning physics engine. </span></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><img width=223 height=114
+10.0pt;margin-left:.5in'><img width=269 height=289 id="Picture 1"
 src="Physics_files/image001.png"></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in;text-indent:-.25in'><span style='font-family:Symbol;
+color:black;background:white'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:"Verdana",sans-serif;color:black;
+background:white'>ODE is a very old physics engine with many limitations.  It
+does support Ninja Physics.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-indent:-.25in'><span style='font-family:Symbol;
@@ -132,8 +138,27 @@ background:white'>Both BulletSim and UBODE support varregions.</span></p>
 10.0pt;margin-left:.5in;text-indent:-.25in'><span style='font-family:Symbol;
 color:black;background:white'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span style='font-family:"Verdana",sans-serif;color:black;
-background:white'>BulletSim is the default physics engine.  It provides the
-best performance and most functionality. </span></p>
+background:white'>BulletSim provides the best performance and most
+functionality.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in;text-indent:-.25in'><span style='font-family:Symbol;
+color:black;background:white'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:"Verdana",sans-serif;color:black;
+background:white'>Bullet in a separate thread prevents physics crashes from crashing
+the region. It is the default physics engine.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in;text-indent:-.25in'><span style='font-family:Symbol;
+color:black;background:white'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span style='font-family:"Verdana",sans-serif;color:black;
+background:white'>ODE Ninja physics are documented in another manual.</span></p>
+
+<p class=MsoNormal style='margin-right:.5in'><span style='font-family:"Verdana",sans-serif;
+color:black;background:white'>&nbsp;</span></p>
+
+<p class=MsoNormal style='margin-right:.5in'><span style='font-family:"Verdana",sans-serif;
+color:black;background:white'>&nbsp;</span></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
@@ -141,10 +166,6 @@ margin-left:.5in;margin-right:0in'>
 <h2><span style='color:black;background:white'>Links:</span></h2>
 
 </div>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
-color:black;background:white'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><a href="http://www.ode.org/"><span style='font-family:
