--- a/OutworldzFiles/Help/Scripts.htm
+++ b/OutworldzFiles/Help/Scripts.htm
@@ -111,13 +111,13 @@ ul
 "Verdana",sans-serif'>Default Engine for scripts is XEngine. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN><img width=281
-height=248 src="Scripts_files/image001.png"></span></p>
+10.0pt;margin-left:.5in;text-autospace:none'><img width=320 height=289
+id="Picture 1" src="Scripts_files/image001.png"></p>
 
-<p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
-11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>YEngine is a new
-engine that has better support for the llSleep() command.  YEngine offers some
-features that improve performance and prevent timeouts.</span></p>
+<p class=MsoNormal style='margin-left:.5in'><a name="_Hlk70108481"><span
+lang=EN style='font-size:11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>YEngine
+is a new engine that has better support for the llSleep() command.  YEngine
+offers some features that improve performance and prevent timeouts.</span></a></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
 11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>The problem with
@@ -134,10 +134,12 @@ Life.</span></p>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span lang=EN style='color:black'>Allow LSL to
-contact the server:</span></h2>
+<h2><span lang=EN style='color:black'>Allow LSL to contact the server:</span></h2>
 
 </div>
+
+<p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
+11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-left:.5in'><span lang=EN style='font-size:
 11.0pt;line-height:115%;font-family:"Verdana",sans-serif'>By default,
