--- a/OutworldzFiles/Help/Birds.htm
+++ b/OutworldzFiles/Help/Birds.htm
@@ -79,12 +79,6 @@ span.TitleChar
 	letter-spacing:.5pt;}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-top:5.0pt;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;}
  /* Page Definitions */
  @page WordSection1
 	{size:8.5in 11.0in;
@@ -137,8 +131,11 @@ width=408 height=314 src="Birds_files/image001.png"></span></p>
 will need to enable the bird module in each region's control panel.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><img width=281 height=213
-id="Picture 1" src="Birds_files/image002.png"></p>
+10.0pt;margin-left:.5in;text-autospace:none'><span style='position:absolute;
+z-index:251658240;left:0px;margin-left:81px;margin-top:39px;width:357px;
+height:195px'><img width=357 height=195 src="Birds_files/image002.png"
+alt="Line Callout 3: Check this Box to Enable Birds in this region"></span><img
+width=275 height=205 id="Picture 1" src="Birds_files/image003.png"></p>
 
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
 
@@ -155,7 +152,7 @@ screen for the checkbox.</span></a></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><img width=391 height=497
-src="Birds_files/image003.png"></p>
+src="Birds_files/image004.png"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-indent:-.25in;text-autospace:none'><span
@@ -388,10 +385,10 @@ update framerate of 1, i.e., birds' position is updated every simulator frame.</
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span style='font-family:"Verdana",sans-serif;
 color:#24292E'>The stats command in-world or via script returns data to
-BirdsChatChannel. The console command returns stats to the console. All the
-modules parameters are returned including a list of the active bird prims
-currently rezzed in the region, and the UUIDs of those prims' root prim. Also
-included is a list of any avatar UUIDs that may be sitting on those prims. </span></p>
+BirdsChatChannel. The console command returns stats to the console. All the modules
+parameters are returned including a list of the active bird prims currently
+rezzed in the region, and the UUIDs of those prims' root prim. Also included is
+a list of any avatar UUIDs that may be sitting on those prims. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span style='font-family:"Verdana",sans-serif;
@@ -421,7 +418,7 @@ color:#24292E'>Links:</span></b></p>
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><a
 href="https://github.com/JakDaniels/OpenSimBirds"><span style='font-family:
-"Times New Roman",serif;color:black'><span style='color:black'>https://github.com/JakDaniels/OpenSimBirds</span></span></a></p>
+"Times New Roman",serif'>https://github.com/JakDaniels/OpenSimBirds</span></a></p>
 
 </div>
 
