--- a/OutworldzFiles/Help/Cache.htm
+++ b/OutworldzFiles/Help/Cache.htm
@@ -27,18 +27,19 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-h2
-	{mso-style-link:"Heading 2 Char";
+h1
+	{mso-style-link:"Heading 1 Char";
 	margin-top:5.0pt;
 	margin-right:0in;
 	margin-bottom:0in;
 	margin-left:0in;
 	line-height:115%;
-	background:#D9E2F3;
+	background:#4472C4;
 	border:none;
 	padding:0in;
-	font-size:10.0pt;
+	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
@@ -51,12 +52,14 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
-span.Heading2Char
-	{mso-style-name:"Heading 2 Char";
-	mso-style-link:"Heading 2";
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Times New Roman",serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
-	background:#D9E2F3;}
+	background:#4472C4;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -103,16 +106,17 @@ next time it starts.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Opensim
-must be stopped to clear script and the Xbake caches.</span></p>
+must be stopped to clear script and the Avatar Bake caches.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=576 height=275 id="Picture 1"
-src="Cache_files/image001.png"></span></p>
+10.0pt;margin-left:.5in'><img width=221 height=200 id="Picture 5"
+src="Cache_files/image001.png"
+alt="Graphical user interface, text, application&#10;&#10;Description automatically generated"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Script
 cache: </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>Clearing
-the script cache is only necessary after an update to Opensim binaries.  Dreamgrid
+the script cache is only necessary after an update to Opensim binaries.  DreamGrid
 will not delete the “.STATE” files so your virtual pets will not die.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
@@ -133,83 +137,117 @@ the images and is typically exceptionally large. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Mesh
-cache: </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>is
-typically not used</span></p>
+cache: </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>holds
+mesh pieces.</span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
-margin-left:.5in;margin-right:0in'>
+<span lang=EN style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
 
-<h2 style='background:#D9E2F3'><b><span lang=EN style='color:black'>Flotsam
-Cache Settings</span></b></h2>
+<p class=MsoNormal><span lang=EN>&nbsp;</span></p>
+
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
+
+<h1><span lang=EN>Flotsam Cache Settings</span></h1>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
 background:white'><br>
-OpenSimulator has an asset cache that stores the assets retrieved from an asset
-service. This reduces the load on a possibly remote asset service and improves
-OpenSimulator responsiveness.</span></p>
+</span><span lang=EN style='font-family:"Verdana",sans-serif'>OpenSimulator has
+an asset cache that stores the assets retrieved from an asset service. This
+reduces the load on a possibly remote asset service and improves OpenSimulator
+responsiveness.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'><img
-width=576 height=275 id="Picture 2" src="Cache_files/image001.png"></span></p>
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Viewer
+cache</span></b><span lang=EN style='font-family:"Verdana",sans-serif'> is for
+modern viewers. If you use old viewers you may have issues.  Turn this off for
+old viewers.</span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3;
-margin-left:.5in;margin-right:0in'>
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Cache
+Enabled</span></b><span lang=EN style='font-family:"Verdana",sans-serif'>: The
+cache should always be enabled.</span></p>
 
-<h2 style='background:#D9E2F3'><span style='color:black;background:white'>Flotsam
-asset cache</span></h2>
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Cache
+Directory</span></b><span lang=EN style='font-family:"Verdana",sans-serif'> man
+be moved to another disk. It is best practice to save all large folders such as
+this cache to another disk.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Log
+level </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>is for
+debugging.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>Timeout
+in Hours </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>is
+how you set how much disk it uses. Lower numbers = less disk space. The larger
+the number, the better performance you will get.   Typical numbers are 24 hours
+for small grids, a few hours for large grids.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in'><img width=330 height=225 id="Picture 6"
+src="Cache_files/image002.png"
+alt="Graphical user interface, text, application&#10;&#10;Description automatically generated"></p>
+
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal><span style='font-family:"Times New Roman",serif;background:
+white'>&nbsp;</span></p>
+
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
+
+<h1><span lang=EN>Flotsam asset cache</span></h1>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif;
-background:white'>&nbsp;</span></b></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Note:
+You must run the Flotsam asset cache if you are running the FSassets file
+system database.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>Note: You do not need to run the Flotsam asset cache if you
-are running the FSassets file system database locally.</span></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>The
+Flotsam asset cache stores assets on disk and in memory. </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>The Flotsam asset cache, stores assets on disk and in memory.
-</span></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>At
+the moment, the amount of memory or filesystem storage used by the cache can
+only be limited via manual actions (wiping all or part of cached assets from
+the filesystem), by console commands (e.g. &quot;fcache clear&quot;) or by
+timeout settings (e.g. FileCacheTimeout = 1 to automatically remove cache files
+not accessed for 1 hours). </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>At the moment, the amount of memory or filesystem storage
-used by the cache can only be limited via manual actions (wiping all or part of
-cached assets from the filesystem), by console commands (e.g. &quot;fcache
-clear&quot;) or by timeout settings (e.g. FileCacheTimeout = 1 to automatically
-remove cache files not accessed for 1 hours). </span></p>
+10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>General
+principles</span></b></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif;
-background:white'>General principles</span></b></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>When
+OpenSimulator requires an asset (e.g. in response to a viewer request for a
+notecard), then it first asks the cache for this data. If the data is not found
+in the cache, then it asks the grid asset service (or possibly a foreign asset
+service in the case of Hypergrid). If the asset is found, then it is both
+stored in the cache and returned to the user.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>When OpenSimulator requires an asset (e.g. in response to a
-viewer request for a notecard), then it first asks the cache for this data. If
-the data is not found in the cache, then it asks the grid asset service (or
-possibly a foreign asset service in the case of Hypergrid). If the asset is found,
-then it is both stored in the cache and returned to the user.</span></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>If
+an asset is uploaded to OpenSimulator (e.g. by the viewer uploading an
+animation), then the asset is immediately both kept in cache (if there is room
+and the asset is not temporary) and sent to the asset service (if the asset is
+not temporary).</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>If an asset is uploaded to OpenSimulator (e.g. by the viewer
-uploading an animation), then the asset is immediately both kept in cache (if
-there is room and the asset is not temporary) and sent to the asset service (if
-the asset is not temporary).</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif;
-background:white'>Therefore, at any point you can wipe any temporary data
-stored by the asset cache (e.g. on the filesystem), since the next request for
-that asset will simply query the asset service as the asset will not be found
-in cache.</span></p>
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Therefore,
+at any point you can wipe any temporary data stored by the asset cache (e.g. on
+the filesystem), since the next request for that asset will simply query the
+asset service as the asset will not be found in cache.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>&nbsp;</span></p>
