--- a/OutworldzFiles/Help/DNS.htm
+++ b/OutworldzFiles/Help/DNS.htm
@@ -36,18 +36,19 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-h2
-	{mso-style-link:"Heading 2 Char";
+h1
+	{mso-style-link:"Heading 1 Char";
 	margin-top:5.0pt;
 	margin-right:0in;
 	margin-bottom:0in;
 	margin-left:0in;
 	line-height:115%;
-	background:#DEEAF6;
+	background:#5B9BD5;
 	border:none;
 	padding:0in;
-	font-size:10.0pt;
+	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
@@ -70,12 +71,13 @@ p
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-span.Heading2Char
-	{mso-style-name:"Heading 2 Char";
-	mso-style-link:"Heading 2";
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
-	background:#DEEAF6;}
+	background:#5B9BD5;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -119,8 +121,8 @@ or a Public IP. You can register  and use your own domain, or use your routers
 public IP, or use the Outworldz system’s’ free Dynamic DNS system (DYN DNS). </span></a></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
-"Verdana",sans-serif'><img width=329 height=267 src="DNS_files/image001.png"></span></p>
+10.0pt;margin-left:.5in;text-autospace:none'><img width=423 height=363
+id="Picture 1" src="DNS_files/image001.png"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
@@ -133,8 +135,13 @@ characters.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
-"Verdana",sans-serif'> Do not add anything else other than a name and either
-inworldz.net or .outworldz.net.  </span></p>
+"Verdana",sans-serif'>You may add an alternate name to be registered in the dynamic
+DNS system. This is typically used for the WWW function in Apache’s web server.</span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
+"Verdana",sans-serif'>Do not add anything else other than a name, periods ‘.’ and
+either ‘inworldz.net’, or ‘.outworldz.net’.  </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
@@ -155,10 +162,6 @@ ideal for schools and other types of private work grids.</span></p>
 "Verdana",sans-serif'>When there is no network connection, such as when
 travelling, use localhost, or 127.0.0.1.  These allow only the viewer on the
 server to connect.</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
-"Verdana",sans-serif'><img width=316 height=257 src="DNS_files/image002.png"></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'><b><span lang=EN style='font-family:
@@ -220,20 +223,15 @@ be the Public IP address of your router.</span></p>
 10.0pt;margin-left:.5in;text-autospace:none'><span lang=EN style='font-family:
 "Verdana",sans-serif'>&nbsp;</span></p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
-margin-left:.5in;margin-right:0in'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2 style='background:#DEEAF6'><span lang=EN style='color:black'>Troubleshooting
-Network:</span></h2>
+<h1><span lang=EN>Troubleshooting Network:</span></h1>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'>1) Go back to running
 locally.&nbsp; Set the DNS name or IP to 127.0.0.1 and press Save.</p>
-
-<p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
-.5in'><img border=0 width=329 height=267 src="DNS_files/image003.png"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in;text-autospace:none'>Start the grid up.</p>
@@ -259,7 +257,7 @@ like</p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'><img border=0
-width=400 height=455 src="DNS_files/image004.png"></span></b></p>
+width=400 height=455 src="DNS_files/image002.png"></span></b></p>
 
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><br>
