--- a/OutworldzFiles/Help/BanList.htm
+++ b/OutworldzFiles/Help/BanList.htm
@@ -13,6 +13,9 @@
 	{font-family:"Cambria Math";
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
+	{font-family:Calibri;
+	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
 	{font-family:"Calibri Light";
 	panose-1:2 15 3 2 2 2 4 3 2 4;}
 @font-face
@@ -27,6 +30,22 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	line-height:115%;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	font-weight:normal;}
 p.MsoTitle, li.MsoTitle, div.MsoTitle
 	{mso-style-link:"Title Char";
 	margin:0in;
@@ -40,6 +59,13 @@ a:link, span.MsoHyperlink
 	{font-family:"Times New Roman",serif;
 	color:#0563C1;
 	text-decoration:underline;}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -71,40 +97,47 @@ div.WordSection1
 
 <p class=MsoTitle align=center style='text-align:center'>Ban Lists</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>Bans
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>Bans
 can be set for Grids, IP addresses, Viewers, and MAC addresses.  MAC addresses
 are a serial number found in Ethernet cards.    These bans shut off incoming
 traffic by using Opensim Robust capabilities, and by adding entries to the
 Windows Firewall.  They are not a total solution but can work in many cases.  
-This may be not be effective as the login name can be changed, the Viewer Name
-can be tweaked, they may have another PC with a different MAC address or they
-change it, and the IP may change by the ISP or come from a VPN.    People who
-bypass this DRM restriction are breaking into a computer, a felony, so
+This may not be effective as the login name can be changed, the Viewer Name can
+be tweaked, they may have another PC with a different MAC or they may have changes
+it, and the IP may change by the ISP or come from a VPN.    People who bypass
+this DRM restriction are breaking into a computer, which is a felony, so
 penalties far beyond copyright laws could apply.</span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'><img
-width=591 height=176 id="Picture 2" src="BanList_files/image001.png"></span></p>
+<p class=MsoNormal style='margin-left:.5in'><img width=624 height=251
+id="Picture 1" src="BanList_files/image001.png"></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>Settings
-go into effect when you save the screen after making changes.  For OsGrid,
-Metro and region servers, only IP bans will work since no robust is running on
-your Region server.  </span></p>
+<p class=MsoNormal style='margin-left:.5in'><b><u><span style='font-family:
+"Times New Roman",serif'>Note that # is a Comment</span></u></b></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>Getting
-Ban Data: </span></b><span style='font-family:"Times New Roman",serif'>You can
-get the Login Name and Grid http://name:port, IP address, and MAC address of
-people from the Robust log as it happens. You can also look in the menu system
-at Help -&gt;View Logs-&gt;Robust to view the log with Baretail.exe.</span></p>
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>Settings
+go into effect when </span>you save the screen<span style='font-family:"Times New Roman",serif'>
+after making changes.  For OsGrid, Metro and region servers, only IP bans will
+work since no robust is running on your Region server.  </span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>A
-typical Robust Log entry would be as follows: (highlights mine)</span></p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
 
-<p class=MsoNormal style='margin-left:31.5pt'><span style='font-family:"Courier New"'>INFO 
+<h1 style='background:#5B9BD5'>Getting Ban Data</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>You
+can get the Login Name and Grid http://name:port, IP address, and MAC address
+of people from the Robust log as it happens. You can also look in the menu
+system at Help -&gt;View Logs-&gt;Robust to view the log with Baretail.exe.</span></p>
+
+<p class=MsoNormal style='margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>Its
+is best to run the Robust log with log level set to INFO.</span></b></p>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>A
+typical Robust Log entry would be as follows: (highlights are mine)</span></p>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Courier New"'>INFO 
 (104) - OpenSim.Services.HypergridService.GatekeeperService [GATEKEEPER
 SERVICE]: Login request for Jo.Blow@<b><u> www.xyz.com</u></b>:8002 @ http://<u>www.xyz.com</u>:8002/
 (3be47575-06dd-46b0-8637-87a8967c432c) at ab8d7770-3782-21e4-8c41-1813211c9b88
@@ -115,57 +148,77 @@ Place (2c53df18-143f-4340-ae73-f2885d9694d8) @ <a
 href="http://grid.nope.com:8002/"><span style='color:black'><span
 style='color:black'>http://grid.nope.com:8002/</span></span></a></span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>Grid
-Ban: </span></b><span style='font-family:"Times New Roman",serif'>To ban the
-grid that the avatar who originally  logged  on, add <b><a
-href="http://www.xyz.com:8002/"><span style='color:black'><span
-style='color:black'>http://www.xyz.com</span></span><span style='color:black;
-font-weight:normal'><span style='color:black'>:8002</span></span></a></b>. The
-“http://” and “:port” number is required.</span></p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>Grid
-Ban: </span></b><span style='font-family:"Times New Roman",serif'>To ban the
-grid that the avatar teleported from (not necessarily her home grid) , add <b><a
-href="http://grid.nope.com:8002/"><span style='color:black'><span
+<h1 style='background:#5B9BD5'>Grid Ban</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'> </span></b><span
+style='font-family:"Times New Roman",serif'>To ban the grid that the avatar who
+originally logged  on, add <b><a href="http://www.xyz.com:8002/"><span
+style='color:black'><span style='color:black'>http://www.xyz.com</span></span><span
+style='color:black;font-weight:normal'><span style='color:black'>:8002</span></span></a></b>.
+The “http://” and “:port” number is required.</span></p>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>To
+ban the grid that the avatar teleported from (not necessarily her home grid) ,
+add <b><a href="http://grid.nope.com:8002/"><span style='color:black'><span
 style='color:black'>http://grid.nope.com</span></span><span style='color:black;
 font-weight:normal'><span style='color:black'>:8002</span></span></a></b>. The
 “http://” and “:port” number is required.</span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>IP
-Ban: </span></b><span style='font-family:"Times New Roman",serif'>To ban an IP,
-add the IP  like this:  52.8.203.221.    You can also add a /24 to the end to ban
-all IP addresses in the same range of 256 IP addresses. Use IP “52.8.203.0/24”
-to ban all users from IP 52.8.203.0 to IP 52.8.203.255.</span></p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>MAC
-Address:  </span></b><span style='font-family:"Times New Roman",serif'>To ban a
-PC by the Ethernet card MAC address, add the MAC address from the robust log: “<b>d5af8bee7e6a265c41e729416d570f57</b>”.   
+<h1 style='background:#5B9BD5'>IP Ban</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>To
+ban an IP, add the IP  like this:  52.8.203.221.    You can also add a /24 to
+the end to ban all IP addresses in the same range of 256 IP addresses. Use IP
+“52.8.203.0/24” to ban all users from IP 52.8.203.0 to IP 52.8.203.255.</span></p>
+
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
+
+<h1 style='background:#5B9BD5'>MAC Address Ban</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'> 
+</span></b><span style='font-family:"Times New Roman",serif'>To ban a PC by the
+Ethernet card MAC address, add the MAC address from the robust log: “<b>d5af8bee7e6a265c41e729416d570f57</b>”.   
 </span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><b><span style='font-family:"Times New Roman",serif'>Viewer
-Ban:  </span></b><span style='font-family:"Times New Roman",serif'>To ban a
-specific  viewer, add the name and Revision. “Firestorm-Releasex64
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:.5in;margin-right:0in'>
+
+<h1 style='background:#5B9BD5'>Viewer Ban</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>To
+ban a specific  viewer, add the name and Revision. “Firestorm-Releasex64
 5.2.8.58205”.  To ban all version 5 Firestorms, add “Firestorm-Releasex64 5”. </span></p>
 
-<p class=MsoNormal style='text-indent:.5in'><b><span style='font-family:"Times New Roman",serif'>Copybot
-Viewers</span></b></p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5;
+margin-left:31.5pt;margin-right:0in'>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>To
-ban copybot viewers such as Darkstorm, add “Firestorm-Releasex64 5.0.11”. 
+<h1 style='background:#5B9BD5'>Copybot Viewers</h1>
+
+</div>
+
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>To
+ban old copybot viewers such as Darkstorm, add “Firestorm-Releasex64 5.0.11”. 
 These old viewers are rarely in use, except by copybotters.</span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'><img
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'><img
 border=0 width=616 height=184 id="Picture 3" src="BanList_files/image002.jpg"></span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>There
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>There
 are several ways get data to ban by viewer. One way is to look in the Stats for
 your Welcome region.  Another is to copy and paste it from the robust screen,
 or robust.log.    Click your Welcome region in the Regions menu, then select
@@ -173,12 +226,14 @@ the Statistics Button.  This screen shows the “Sessions” tab, so you can see if
 someone is still using an old viewer recently. If so, they are a candidate to
 be a copybotter. </span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:4.5pt'><s><span style='font-family:"Times New Roman",serif'><span
+<p class=MsoNormal style='margin-left:.5in'><span style='font-family:"Times New Roman",serif'>There
+is a Analyze Log button in the Log settings that will show you all MAC and Disk
+ID0’s that were seen.</span></p>
+
+<p class=MsoNormal style='margin-left:4.5pt'><s><span style='font-family:"Times New Roman",serif'><span
  style='text-decoration:none'>&nbsp;</span></span></s></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:4.5pt'><s><span style='font-family:"Times New Roman",serif'><span
+<p class=MsoNormal style='margin-left:4.5pt'><s><span style='font-family:"Times New Roman",serif'><span
  style='text-decoration:none'>&nbsp;</span></span></s></p>
 
 </div>
