--- a/OutworldzFiles/Help/Database.htm
+++ b/OutworldzFiles/Help/Database.htm
@@ -30,18 +30,19 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-h2
-	{mso-style-link:"Heading 2 Char";
+h1
+	{mso-style-link:"Heading 1 Char";
 	margin-top:5.0pt;
 	margin-right:0in;
 	margin-bottom:0in;
 	margin-left:0in;
 	line-height:115%;
-	background:#D9E2F3;
+	background:#4472C4;
 	border:none;
 	padding:0in;
-	font-size:10.0pt;
+	font-size:11.0pt;
 	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
@@ -54,18 +55,23 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#4472C4;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
+a:link, span.MsoHyperlink
+	{color:#0563C1;
+	text-decoration:underline;}
 p
 	{margin-right:0in;
 	margin-left:0in;
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Times New Roman",serif;}
-span.Heading2Char
-	{mso-style-name:"Heading 2 Char";
-	mso-style-link:"Heading 2";
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Times New Roman",serif;
+	color:white;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
-	background:#D9E2F3;}
+	background:#4472C4;}
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
@@ -98,29 +104,32 @@ ul
 
 </head>
 
-<body lang=EN-US style='word-wrap:break-word;text-justify-trim:punctuation'>
+<body lang=EN-US link="#0563C1" vlink="#954F72" style='word-wrap:break-word;
+text-justify-trim:punctuation'>
 
 <div class=WordSection1>
 
 <p class=MsoTitle align=center style='text-align:center'><span lang=EN>Database
 Settings</span></p>
 
-<p class=MsoNormal><span lang=EN style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Did
 MySQL crash?  See section <b>Crashes</b>.   </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=576 height=235 id="Picture 1"
-src="Database_files/image001.jpg"></span></p>
+10.0pt;margin-left:.5in'><img width=629 height=280 id="Picture 1"
+src="Database_files/image001.png"
+alt="Graphical user interface&#10;&#10;Description automatically generated"></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><b><u><span lang=EN style='font-family:"Verdana",sans-serif'>Do
 not change any of these settings without knowing what you are doing!</span></u></b><span
-lang=EN style='font-family:"Verdana",sans-serif'> Any change here must match
-complicated hand-made changes in MySQL!  See the bottom of this help section
-for more details.</span></p>
+lang=EN style='font-family:"Verdana",sans-serif'> </span></p>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>Any
+change here must match complicated hand-made changes in MySQL!  See the bottom
+of this help section for more details.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>There
@@ -133,10 +142,9 @@ region.</span></p>
 root password is blank. This is safe as it only listens on localhost, which is
 your server.</span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Robust
-Database:</span></h2>
+<h1><span lang=EN>Robust Database:</span></h1>
 
 </div>
 
@@ -178,31 +186,29 @@ lang=EN style='font-family:"Verdana",sans-serif'> The password for Robust. </spa
 10.0pt;margin-left:.75in;text-indent:.25in'><span lang=EN style='font-family:
 "Verdana",sans-serif'> Default: <i>robustpassword</i></span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:1.0in;text-indent:-.25in'><span lang=EN style='font-family:
-Symbol'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p class=MsoNormal style='margin-top:6.0pt;margin-right:.5in;margin-bottom:
+10.0pt;margin-left:1.0in;text-indent:-.25in'><span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><b><span lang=EN style='font-family:"Verdana",sans-serif'>MySQL
 Port: </span></b><span lang=EN style='font-family:"Verdana",sans-serif'>The
 TCP/IP port that both databases use. <br>
 <br>
-Default = 3309 to not interfere with the normal MySQL Port of 3306</span></p>
-
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
-
-<h2 style='background:#D9E2F3'><span style='color:black'>FSAssets</span></h2>
-
-</div>
+Default = 3306. You can set this to 3307, 3308 or 3309 to not interfere with
+the Other MySQL’s that may be running.  </span></p>
 
 <p class=MsoNormal style='margin-top:6.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>You can
-select the FSAssets button to set up a File System As Assets Database. This is
-recommended only for large grids, with hundreds of Gigabyte sized databases.</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in;text-indent:0in'><span lang=EN style='font-family:Symbol'>·<span
+10.0pt;margin-left:1.0in;text-indent:-.25in'><span style='font-family:Symbol'>·<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><b><u><span lang=EN style='font-family:"Verdana",sans-serif'>Local
-Region Database:</span></u></b></p>
+</span></span><b><span lang=EN style='font-family:"Verdana",sans-serif'>FSAssets:</span> 
+</b><span style='font-family:"Verdana",sans-serif'>You can select the FSAssets
+button to set up a File System As Assets Database. This is recommended only for
+large grids, with hundreds of Gigabyte sized databases.</span></p>
+
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
+
+<h1><span lang=EN>Local Region Database:</span></h1>
+
+</div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:1.0in;text-indent:-.25in'><span lang=EN style='font-family:
@@ -258,37 +264,22 @@ grant all on robust.* to 'anewrobustuser'@'localhost';<br>
 quit;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'>&nbsp;</span></p>
-
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
-
-<h2 style='background:#D9E2F3'><span style='color:black'>Clear Region List</span></h2>
-
-</div>
-
-<p class=MsoNormal style='margin-top:6.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>Clicking
-this button will delete all registered regions in your database.  They will be
-restored next time you start Opensim</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><b><span lang=EN style='font-family:"Verdana",sans-serif'>&nbsp;</span></b></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span lang=EN style='color:black'>Running MySQL
-as a Service</span></h2>
+<h1><span lang=EN>Running MySQL as a Service</span></h1>
 
 </div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif;
 color:black;background:white'>DreamGrid will detect any running MySQL using the
-same port.  You can install MySQL as a Windows service. There is a batch file
-*InstallAsAService.bat* in MySQL\bin to set this up. MySQL will then start and
-stop safely with Windows. This batch file must be run once, as an
-Administrator. You type &quot;CMD&quot; in the search box, and then right click
-the Command Prompt and select &quot;Run as Administrator&quot;.&nbsp;</span></p>
+same port.  You can install MySQL as a Windows service. There is a batch file “InstallAsAService.bat”
+in MySQL\bin to set this up. MySQL will then start and stop safely with
+Windows. This batch file must be run once, as an Administrator. You type
+&quot;CMD&quot; in the search box, and then right click the Command Prompt and
+select &quot;Run as Administrator&quot;.&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in'><span lang=EN style='font-family:"Verdana",sans-serif'><img
@@ -316,9 +307,9 @@ to MySQL to shut itself off gracefully. The only danger is that power fails and
 you corrupt the database.  If you are serious about running a grid, then a UPS
 is necessary.</span></span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span style='color:black'>MySQL Crashes:</span></h2>
+<h1>MySQL Crashes:</h1>
 
 </div>
 
@@ -335,18 +326,22 @@ color:black'>Navigate to the&nbsp;<b>Outworldzfiles\mysql\bin</b>&nbsp;folder. <
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
 color:black'>Then double-click &quot;StartManually.bat”</span></p>
 
-<p class=MsoNormal style='margin-top:12.0pt;margin-right:31.5pt;margin-bottom:
-6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
 color:black'>Any error message it prints may be helpful. If the DOS window
 closes, a MySQL LOG file will be saved in OutworldzFiles\mysql\data as a *.err
 file. That may give you a clue as to what to do.</span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
 
-<h2 style='background:#D9E2F3'><span style='color:black'><br>
-My database still did not start!</span></h2>
+<h1><br>
+My database still did not start!</h1>
 
 </div>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -379,8 +374,7 @@ a long time as MySQL is repairing the database.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'>Once the Check and Repair is finished, type in
-‘StopDatabase&lt;enter&gt;’</span></p>
+color:black'>Once the Check and Repair is finished, double-click Mysql\bin\StopMySQL.bat’</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -397,7 +391,7 @@ delete ibdata1! Then repeat the above sequence.</span></p>
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
 color:black'>If I had really deep issues with a database and it was
 unrecoverable, I would try the last copied one,&nbsp;then the SQL, then an
-OAR,&nbsp; up, and the very last thing I would try is an OAR/IAR
+OAR,&nbsp;and the very last thing I would try is an OAR/IAR
 restore.&nbsp;&nbsp;&nbsp; So far I have recovered at least a dozen databases
 for people. &nbsp; One developed a bad bit which took about a week to ftp, to
 develop a fix for and a simple query to repair.&nbsp; </span></p>
@@ -417,12 +411,25 @@ and type in:</span></p>
 <p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
 .5in'><span style='font-family:"Courier New"'>quit;</span></p>
 
-<div style='border:solid #D9E2F3 3.0pt;padding:0in 0in 0in 0in;background:#D9E2F3'>
+<p style='margin-top:5.0pt;margin-right:.5in;margin-bottom:5.0pt;margin-left:
+.5in'><span style='font-family:"Courier New"'>&nbsp;</span></p>
 
-<h2 style='background:#D9E2F3'><span style='color:black'><br>
-Starting Over with a <u>Blank </u>Database</span></h2>
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;background:white'><b><span style='font-family:"Verdana",sans-serif;
+color:black'>Please do not give up if your database will not start!   Contact me
+at <a href="mailto:fred@outworldz.com">fred@outworldz.com</a> and I will see
+what I can do. I have not yet lost a database.</span></b></p>
+
+<div style='border:solid #4472C4 3.0pt;padding:0in 0in 0in 0in;background:#4472C4'>
+
+<h1><br>
+Starting Over with a <u>Blank </u>Database</h1>
 
 </div>
+
+<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
+10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
@@ -459,12 +466,8 @@ information in each DOS box for Each region.   </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'>Spell</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
-color:black'>You can also restore the database if you have a .SQL backup. Or
-use OARs and IARs.</span></p>
+color:black'>You can restore the database if you have a .SQL backup. Or use
+OARs and IARs.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
 10.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
