--- a/OutworldzFiles/Help/Diva.htm
+++ b/OutworldzFiles/Help/Diva.htm
@@ -3,7 +3,6 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
-<title>Web Admnistrator</title>
 <style>
 <!--
  /* Font Definitions */
@@ -42,6 +41,22 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	line-height:115%;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	font-weight:normal;}
 h2
 	{mso-style-link:"Heading 2 Char";
 	margin-top:5.0pt;
@@ -57,6 +72,15 @@ h2
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
+p.MsoTitle, li.MsoTitle, div.MsoTitle
+	{mso-style-link:"Title Char";
+	margin:0in;
+	line-height:115%;
+	font-size:26.0pt;
+	font-family:"Calibri Light",sans-serif;
+	color:#5B9BD5;
+	text-transform:uppercase;
+	letter-spacing:.5pt;}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{margin-top:5.0pt;
 	margin-right:0in;
@@ -89,6 +113,14 @@ p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxS
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Times New Roman",serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
@@ -96,6 +128,13 @@ span.Heading2Char
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#DEEAF6;}
+span.TitleChar
+	{mso-style-name:"Title Char";
+	mso-style-link:Title;
+	font-family:"Calibri Light",sans-serif;
+	color:#5B9BD5;
+	text-transform:uppercase;
+	letter-spacing:.5pt;}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
  /* Page Definitions */
@@ -119,12 +158,8 @@ punctuation'>
 
 <div class=WordSection1>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
-
-<h2><span style='color:black'>            <a name="_Toc58323653">Web Control
-Panel</a> </span></h2>
-
-</div>
+<p class=MsoTitle align=center style='text-align:center'><a name="_Toc58323653">Web
+Control Panel</a></p>
 
 <p class=MsoNormal>The Management Web page is at <a href="http://127.0.0.1:8002"><span
 style='color:windowtext;text-decoration:none'>http://127.0.0.1:8002</span></a>
@@ -201,7 +236,11 @@ to that elevated level too.</p>
 <p class=MsoNormal><img border=0 width=439 height=235
 src="Diva_files/image002.png"></p>
 
-<p class=MsoNormal>&nbsp;</p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
+
+<h1 style='background:#5B9BD5'>Wifi Admin</h1>
+
+</div>
 
 <p class=MsoNormal>There are three Opensim users made at startup.  One is for
 the grid to use.  GRID MANAGER is the main user If you mess with it your grid
@@ -298,9 +337,9 @@ style='color:windowtext;text-decoration:none'>https://support.google.com/account
 
 <p class=MsoNormal>&nbsp;</p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323658"><span style='color:black'>Theme</span></a></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323658">Theme</a></h1>
 
 </div>
 
@@ -315,10 +354,10 @@ src="Diva_files/image007.png"></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323659"><span style='color:black'>Viewer Splash Screen URL:</span></a><span
-style='color:black'> </span></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323659">Viewer Splash Screen URL:</a>
+</h1>
 
 </div>
 
@@ -337,9 +376,9 @@ src="Diva_files/image008.png"></p>
 <p class=MsoNormal>Set this to http://(URL of your grid):8002 so they can see
 the Login Page.    It can be any web page.</p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><span style='color:black'>Greeting</span></h2>
+<h1 style='background:#5B9BD5'>Greeting</h1>
 
 </div>
 
@@ -348,9 +387,9 @@ the Login Page.    It can be any web page.</p>
 <p class=MsoNormal><img border=0 width=296 height=49
 src="Diva_files/image009.png"></p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323660"><span style='color:black'>Friendly Name</span></a></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323660">Friendly Name</a></h1>
 
 </div>
 
@@ -361,9 +400,9 @@ If you change this, you must delete and re-add the grid to the viewer.</p>
 <p class=MsoNormal><img border=0 width=295 height=49
 src="Diva_files/image010.png"></p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323661"><span style='color:black'>Default Avatars:</span></a></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323661">Default Avatars:</a></h1>
 
 </div>
 
@@ -421,9 +460,9 @@ you create a new avatar via the Wifi web interface based on these predefined
 avatars the items worn will appear in the newly created avatar’s inventory
 under Clothes -&gt; Default Avatar &lt;AvatarType&gt;.</p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323662"><span style='color:black'>Customizing your theme</span></a></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323662">Customizing your theme</a></h1>
 
 </div>
 
@@ -476,15 +515,15 @@ startup.</p>
 <p class=MsoNormal><img border=0 width=289 height=215
 src="Diva_files/image007.png"></p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<h2><a name="_Toc58323664"><span style='color:black'>Changing the HTML</span></a></h2>
+<h1 style='background:#5B9BD5'><a name="_Toc58323664">Changing the HTML</a></h1>
 
 </div>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal>Diva Canto usds some advanced, Opensim-specific code in her
+<p class=MsoNormal>Diva Canto uses some advanced, Opensim-specific code in her
 Diva pages.</p>
 
 <p class=MsoNormal>The site starts from Opensim\bin\WifiPages\index.html.  </p>
